# txtra

./: .gitignore  LICENSE  MANIFEST.in  README.md  README_ja.md  app.py  pyproject.toml  requirement.txt  requirements.txt  setup.py
provider/: apple-business-manager.yml  atlassian.yml  azure.yml  globalsign.yml  gmail.yml  line-works.yml  o365.yml  zapier.yml  zoho.yml  zoom.yml
tests/: test.py  test_txtra.py
txtra/: __main__.py
txtra/provider/: activegate-ss.yml  adobe-sign.yml  adobe.yml  akamai-cloudpiercer.yml  alibaba-cloud.yml  android-mdm.yml  anodot.yml  apple-business-manager.yml  atlassian.yml  aws-ses.yml  azure.yml  barracuda-bvm.yml  blitz.yml  botify.yml  brave.yml  bugcrowd.yml  citrix.yml  cloudcontrol.yml  dailymotion.yml  detectify.yml  docusign.yml  dropbox.yml  dynatrace.yml  facebook.yml  firebase.yml  globalsign.yml  gmail.yml  godaddy.yml  haveibeenpwned.yml  heroku.yml  knowbe4.yml  letsencrypt.yml  line-works.yml  loaderio.yml  logmein.yml  mailigen.yml  mailjet.yml  mailru.yml  o365.yml  pardot.yml  (+25 more)
